test_suite/alan-2022-examples/failing/005330_mutation.alan
source rU begin leave vW9 "8/20" rem J13 end
